--- a/lab4/Lab_4_Causal_Inference.ipynb
+++ b/lab4/Lab_4_Causal_Inference.ipynb
@@ -71,12 +71,35 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: econml in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (0.13.0)\n",
+            "Requirement already satisfied: statsmodels>=0.10 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.13.2)\n",
             "Requirement already satisfied: sparse in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.13.0)\n",
-            "Requirement already satisfied: scipy>1.4.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.7.3)\n",
-            "Requirement already satisfied: lightgbm in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (3.3.2)\n",
             "Requirement already satisfied: joblib>=0.13.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.1.0)\n",
+            "Requirement already satisfied: numpy in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.21.4)\n",
+            "Requirement already satisfied: lightgbm in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (3.3.2)\n",
+            "Requirement already satisfied: scipy>1.4.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.7.3)\n",
+            "Requirement already satisfied: shap<0.40.0,>=0.38.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.39.0)\n",
             "Requirement already satisfied: dowhy<0.7 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.6)\n",
-            "Requirement already satisfied: shap<0.40.0,>=0.38.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.39.0)\n"
+            "Requirement already satisfied: scikit-learn>0.22.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.0.2)\n",
+            "Requirement already satisfied: pandas in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.4.0)\n",
+            "Requirement already satisfied: networkx>=2.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (2.6.3)\n",
+            "Requirement already satisfied: pydot>=1.4 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (1.4.2)\n",
+            "Requirement already satisfied: sympy>=1.4 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (1.9)\n",
+            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas->econml) (2021.3)\n",
+            "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas->econml) (2.8.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from scikit-learn>0.22.0->econml) (3.1.0)\n",
+            "Requirement already satisfied: tqdm>4.25.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (4.62.3)\n",
+            "Requirement already satisfied: numba in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (0.55.1)\n",
+            "Requirement already satisfied: slicer==0.0.7 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (0.0.7)\n",
+            "Requirement already satisfied: cloudpickle in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (2.0.0)\n",
+            "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from statsmodels>=0.10->econml) (0.5.2)\n",
+            "Requirement already satisfied: packaging>=21.3 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from statsmodels>=0.10->econml) (21.3)\n",
+            "Requirement already satisfied: wheel in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from lightgbm->econml) (0.36.1)\n",
+            "Requirement already satisfied: setuptools in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from numba->shap<0.40.0,>=0.38.1->econml) (51.0.0)\n",
+            "Requirement already satisfied: llvmlite<0.39,>=0.38.0rc1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from numba->shap<0.40.0,>=0.38.1->econml) (0.38.0)\n",
+            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from packaging>=21.3->statsmodels>=0.10->econml) (3.0.6)\n",
+            "Requirement already satisfied: six in c:\\users\\pauil\\appdata\\roaming\\python\\python38\\site-packages (from patsy>=0.5.2->statsmodels>=0.10->econml) (1.15.0)\n",
+            "Requirement already satisfied: mpmath>=0.19 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from sympy>=1.4->dowhy<0.7->econml) (1.2.1)\n",
+            "Requirement already satisfied: colorama in c:\\users\\pauil\\appdata\\roaming\\python\\python38\\site-packages (from tqdm>4.25.0->shap<0.40.0,>=0.38.1->econml) (0.4.3)\n"
           ]
         },
         {
@@ -85,35 +108,6 @@
           "text": [
             "WARNING: You are using pip version 22.0.3; however, version 22.0.4 is available.\n",
             "You should consider upgrading via the 'c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\python.exe -m pip install --upgrade pip' command.\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Requirement already satisfied: scikit-learn>0.22.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.0.2)\n",
-            "Requirement already satisfied: numpy in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.21.4)\n",
-            "Requirement already satisfied: pandas in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (1.4.0)\n",
-            "Requirement already satisfied: statsmodels>=0.10 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from econml) (0.13.2)\n",
-            "Requirement already satisfied: networkx>=2.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (2.6.3)\n",
-            "Requirement already satisfied: pydot>=1.4 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (1.4.2)\n",
-            "Requirement already satisfied: sympy>=1.4 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from dowhy<0.7->econml) (1.9)\n",
-            "Requirement already satisfied: python-dateutil>=2.8.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas->econml) (2.8.2)\n",
-            "Requirement already satisfied: pytz>=2020.1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from pandas->econml) (2021.3)\n",
-            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from scikit-learn>0.22.0->econml) (3.1.0)\n",
-            "Requirement already satisfied: slicer==0.0.7 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (0.0.7)\n",
-            "Requirement already satisfied: cloudpickle in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (2.0.0)\n",
-            "Requirement already satisfied: numba in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (0.55.1)\n",
-            "Requirement already satisfied: tqdm>4.25.0 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from shap<0.40.0,>=0.38.1->econml) (4.62.3)\n",
-            "Requirement already satisfied: patsy>=0.5.2 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from statsmodels>=0.10->econml) (0.5.2)\n",
-            "Requirement already satisfied: packaging>=21.3 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from statsmodels>=0.10->econml) (21.3)\n",
-            "Requirement already satisfied: wheel in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from lightgbm->econml) (0.36.1)\n",
-            "Requirement already satisfied: llvmlite<0.39,>=0.38.0rc1 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from numba->shap<0.40.0,>=0.38.1->econml) (0.38.0)\n",
-            "Requirement already satisfied: setuptools in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from numba->shap<0.40.0,>=0.38.1->econml) (51.0.0)\n",
-            "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from packaging>=21.3->statsmodels>=0.10->econml) (3.0.6)\n",
-            "Requirement already satisfied: six in c:\\users\\pauil\\appdata\\roaming\\python\\python38\\site-packages (from patsy>=0.5.2->statsmodels>=0.10->econml) (1.15.0)\n",
-            "Requirement already satisfied: mpmath>=0.19 in c:\\users\\pauil\\appdata\\local\\programs\\python\\python38\\lib\\site-packages (from sympy>=1.4->dowhy<0.7->econml) (1.2.1)\n",
-            "Requirement already satisfied: colorama in c:\\users\\pauil\\appdata\\roaming\\python\\python38\\site-packages (from tqdm>4.25.0->shap<0.40.0,>=0.38.1->econml) (0.4.3)\n"
           ]
         }
       ],
@@ -276,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "a6CjsXTwJzGA"
       },
@@ -289,6 +283,7 @@
         "    :param effect_pred: predicted treatment effect value\n",
         "    :return: absolute error on ATE\n",
         "    \"\"\"\n",
+        "    return abs(np.mean(effect_pred) - np.mean(effect_true))\n",
         "    # YOUR CODE HERE\n",
         "\n",
         "def pehe(effect_true, effect_pred):\n",
@@ -298,6 +293,7 @@
         "    :param effect_pred: predicted treatment effect value\n",
         "    :return: PEHE\n",
         "    \"\"\"\n",
+        "    return np.sqrt(np.mean(np.power((np.array(effect_true)-np.array(effect_pred)),2)))\n",
         "    # YOUR CODE HERE\n",
         "\n",
         "    "
@@ -325,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "id": "IxY0wgfFtj8U"
       },
@@ -356,7 +352,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 6,
       "metadata": {
         "id": "gtaff_ZittAW"
       },
@@ -376,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 7,
       "metadata": {
         "id": "0Zzkcsd-tx6N"
       },
@@ -387,7 +383,7 @@
               "['x', 't', 'y', 'ite']"
             ]
           },
-          "execution_count": 12,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -411,7 +407,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 8,
       "metadata": {
         "id": "jeZ9y3I7tyvd"
       },
@@ -443,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
       "metadata": {
         "id": "ei2NOfWJvmfN"
       },
@@ -466,7 +462,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 10,
       "metadata": {
         "id": "72uhd6sQ-od7"
       },
@@ -505,7 +501,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 11,
       "metadata": {
         "id": "Va90trtIdOUc"
       },
@@ -520,7 +516,7 @@
               "1.0500000000000003"
             ]
           },
-          "execution_count": 16,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -540,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 12,
       "metadata": {
         "id": "caYQejATdWAT"
       },
@@ -548,10 +544,10 @@
         {
           "data": {
             "text/plain": [
-              "<matplotlib.legend.Legend at 0x233c80529d0>"
+              "<matplotlib.legend.Legend at 0x28bee561880>"
             ]
           },
-          "execution_count": 17,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         },
@@ -597,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 13,
       "metadata": {
         "id": "SPbMWtKAuIRe"
       },
@@ -673,22 +669,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 14,
       "metadata": {
         "id": "r-u0hCF1vhQ2"
       },
       "outputs": [
         {
           "ename": "SyntaxError",
-          "evalue": "invalid syntax (Temp/ipykernel_21668/2975479069.py, line 10)",
+          "evalue": "invalid syntax (Temp/ipykernel_19488/2839843629.py, line 10)",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\pauil\\AppData\\Local\\Temp/ipykernel_21668/2975479069.py\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    xt_train = # YOUR CODE HERE\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+            "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\pauil\\AppData\\Local\\Temp/ipykernel_19488/2839843629.py\"\u001b[1;36m, line \u001b[1;32m10\u001b[0m\n\u001b[1;33m    xt_train = # YOUR CODE HERE\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
           ]
         }
       ],
       "source": [
-        "# Random Forest with default parameters.\n",
+        "#Random Forest with default parameters\n",
         "rf = RandomForestRegressor()\n",
         "\n",
         "# Train on the training data.\n",
@@ -717,6 +713,7 @@
         "rf_y1_test = rf.predict(xt1_test)\n",
         "\n",
         "# Compute ITEs\n",
+        "\n",
         "# ITE = Y_1 - Y_0\n",
         "rf_te_test = # YOUR CODE HERE"
       ]
